--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,7 @@
     <select id="instrument-families">
       <option disabled selected></option>
     </select>
+
+    <div id="instrument-info"></div>
   </body>
 </html>
